Migration to Java 11 and Gradle